Sign-up page content overflow fixed

--- a/css/shared.css
+++ b/css/shared.css
@@ -59,7 +59,7 @@
 
 .footer-container{
     width: 100%;
-    height: 10vh;
+    height: 100px;
     background-color: rgb(48, 46, 46);
     padding-top: 60px;
 
