--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@
 
 }
 .background{
-    height: 90vh;
+    
     width: 100%;
     background-image: url(../assets/asset2.jpg);
     background-size: cover;
